# src/main/java/io/seorin/ddongkan/dto/RaitingResponse.java
@@ -1,35 +1,35 @@
 package io.seorin.ddongkan.dto;
 
+import io.seorin.ddongkan.entity.Rating;
+
 public class RaitingResponse {
 
 	private Double avgStars;
-	private  Double avgClineliness;
+	private  Double avgCleanliness;
 	private Double avgToiletPaper;
 	private Double avgWaterPressure;
 	private Double avgHotWater;
 	private Double avgSafety;
 
-	// TODO: avg 계산은 redis에서 처리
 
-	private RaitingResponse(Double avgStars, Double avgClineliness, Double avgToiletPaper, Double avgWaterPressure,
+	private RaitingResponse(Double avgStars, Double avgCleanliness, Double avgToiletPaper, Double avgWaterPressure,
 		Double avgHotWater, Double avgSafety) {
 		this.avgStars = avgStars;
-		this.avgClineliness = avgClineliness;
+		this.avgCleanliness = avgCleanliness;
 		this.avgToiletPaper = avgToiletPaper;
 		this.avgWaterPressure = avgWaterPressure;
 		this.avgHotWater = avgHotWater;
 		this.avgSafety = avgSafety;
 	}
 
-	public static RaitingResponse of(Double avgStars, Double avgClineliness, Double avgToiletPaper,
-		Double avgWaterPressure, Double avgHotWater, Double avgSafety) {
+	public static RaitingResponse from(Rating rating) {
 		return new RaitingResponse(
-			setDeimicalPointToOne(avgStars),
-			setDeimicalPointToOne(avgClineliness),
-			setDeimicalPointToOne(avgToiletPaper),
-			setDeimicalPointToOne(avgWaterPressure),
-			setDeimicalPointToOne(avgHotWater),
-			setDeimicalPointToOne(avgSafety)
+			setDeimicalPointToOne(rating.getAvgStars()),
+			setDeimicalPointToOne(rating.getAvgCleanliness()),
+			setDeimicalPointToOne(rating.getAvgToiletPaper()),
+			setDeimicalPointToOne(rating.getAvgWaterPressure()),
+			setDeimicalPointToOne(rating.getAvgHotWater()),
+			setDeimicalPointToOne(rating.getAvgSafety())
 		);
 	}
 
@@ -38,5 +38,29 @@ public class RaitingResponse {
 			return null;
 		}
 		return Math.round(value * 10) / 10.0;
+	}
+
+	public Double getAvgStars() {
+		return this.avgStars;
+	}
+
+	public Double getAvgCleanliness() {
+		return this.avgCleanliness;
+	}
+
+	public Double getAvgToiletPaper() {
+		return this.avgToiletPaper;
+	}
+
+	public Double getAvgWaterPressure() {
+		return this.avgWaterPressure;
+	}
+
+	public Double getAvgHotWater() {
+		return this.avgHotWater;
+	}
+
+	public Double getAvgSafety() {
+		return this.avgSafety;
 	}
 }
